<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_pic"
    tools:context=".ui.WeatherMainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCentral_main_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_main_fragment_recent_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout_main_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView_main_fragment_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/textView_main_fragment_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/textView_main_fragment_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|top"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:text="@string/celsius"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_main_fragment_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/card_view_main_fragment_index_of_air_quality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_main_temperature" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_main_fragment_index_of_air_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/white_forty_percent_transparent"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_no_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_main_fragment_state">

                <TextView
                    android:id="@+id/textView_main_fragment_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/little_margin"
                    android:text="@string/city"
                    android:drawablePadding="@dimen/smallest_padding"
                    android:textColor="@color/white"
                    android:textSize="@dimen/standard_text_size"
                    android:gravity="center"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main_fragment_recent_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/cardview_recent"
        tools:itemCount="3"/>

    <LinearLayout
        android:id="@+id/linearLayout_main_fragment_more_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_main_fragment_recent_days"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView_main_fragment_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="@dimen/little_text"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

    <TextView
        android:textSize="@dimen/standard_text_size"
        android:id="@+id/textView_main_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/updated"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>